Fix package too big message

--- a/src/public/less/components/package-file-browser.less
+++ b/src/public/less/components/package-file-browser.less
@@ -211,7 +211,6 @@
 	}
 
 	.files-loading-msg {
-		display: flex;
 		justify-content: center;
 		align-items: center;
 		width: 100%;
